k8s/prod/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: group19-prod
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: group19-backend
          image: javaprogroup19/impl:1.0.3-ARM
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8086
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: group19-prod
  labels:
    name: group19-backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 8086
      name: api-port
      protocol: TCP
      targetPort: 8086
    - port: 9092
      name: socketio
      protocol: TCP
      targetPort: 9092
